Tugas db_sql update

--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
           <li><a href="about.html" class="active">About</a></li>
 
           </li>
-          <li><a href="tugasjavascripts.html">Tugas Javascripts</a></li>
+          <li><a href="tugas_dbsql.php">Tugas db_sql</a></li>
         </ul>
       </nav><!-- .navbar -->
 
