--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <li><a href="about.html">About</a></li>
                 </ul>
               </li>
-          <li><a href="tugasjavascripts.html">Tugas Javascripts</a></li>
+          <li><a href="tugas_dbsql.php">Tugas db_sql</a></li>
         </ul>
       </nav><!-- .navbar -->
 
