--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Nova Bootstrap Template - About</title>
+  <title>Nanda Surya Bootstrap Template - Index</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -30,7 +30,7 @@
   <link href="assets/css/main.css" rel="stylesheet">
 
   <!-- =======================================================
-  * Template Name: Nova
+  * Template Name: Nanda
   * Updated: Sep 18 2023 with Bootstrap v5.3.2
   * Template URL: https://bootstrapmade.com/nova-bootstrap-business-template/
   * Author: BootstrapMade.com
@@ -38,7 +38,7 @@
   ======================================================== -->
 </head>
 
-<body class="page-about">
+<body class="page-index">
 
   <!-- ======= Header ======= -->
   <header id="header" class="header d-flex align-items-center fixed-top">
@@ -55,11 +55,19 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html" class="active">About</a></li>
-
-          </li>
-          <li><a href="tugas_dbsql.php">Tugas db_sql</a></li>
+          <li><a href="index.html" >Home</a></li>
+        </ul>
+        <ul>
+          <li><a href="about.html"class="active">About</a></li>
+        </ul>
+        <ul>
+       <li><a href="tugasjavascripst.html">Tugas Prognet 1</a></li>
+        </ul>
+        <ul>
+          <li><a href="tugasjava.html">Tugas Prognet 2</a></li>
+        </ul>
+        <ul>
+          <li><a href="tugas_dbsql.php">Tugas Prognet 3</a></li>
         </ul>
       </nav><!-- .navbar -->
 
